--- a/development/frontend/src/components/DefaultHeader.css
+++ b/development/frontend/src/components/DefaultHeader.css
@@ -1,13 +1,22 @@
 @media only screen and (min-width: 821px) {
   .headerDefault {
     /* border: 2px solid rgb(255, 0, 144); */
-    background-color: rgb(128, 196, 255);
+    background-color: #f0dcda;
     height: 7vh;
     width: 821px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     top: 0;
+  }
+
+  .headerLogo {
+    height: 100%;
+    margin-right: 27%;
+  }
+
+  .headerLogo img {
+    height: 100%;
   }
 
   .logOutDefault {
@@ -38,19 +47,29 @@
 @media only screen and (max-width: 820px) {
   .headerDefault {
     /* border: 2px solid rgb(255, 0, 144); */
-    background-color: rgb(128, 196, 255);
+    background-color: #f0dcda;
     height: 5vh;
     width: 100vw;
     display: flex;
+    justify-content: flex-end;
     align-items: center;
     top: 0;
+  }
+
+  .headerLogo {
+    height: 100%;
+    margin-right: 27%;
+  }
+
+  .headerLogo img {
+    height: 100%;
   }
 
   .logOutDefault {
     /* border: 2px solid rgb(68, 19, 47); */
     display: flex;
     font-size: 3vmax;
-    margin-left: 87vw;
+    margin-right: 5%;
   }
 
   .logoutCardDefault {
@@ -75,20 +94,29 @@
 @media only screen and (max-width: 767px) {
   .headerDefault {
     /* border: 2px solid rgb(255, 0, 144); */
-    background-color: rgb(128, 196, 255);
+    background-color: #f0dcda;
     height: 6vh;
     width: 100vw;
     display: flex;
-    align-items: center;
     justify-content: flex-end;
+    align-items: center;
     top: 0;
+  }
+
+  .headerLogo {
+    height: 100%;
+    margin-right: 18%;
+  }
+
+  .headerLogo img {
+    height: 100%;
   }
 
   .logOutDefault {
     /* border: 2px solid rgb(68, 19, 47); */
     display: flex;
-    justify-content: flex-end;
     font-size: 3vmax;
+    margin-right: 9%;
   }
 
   .logoutCardDefault {
