--- a/development/frontend/src/pages/user/css/UserProfile.css
+++ b/development/frontend/src/pages/user/css/UserProfile.css
@@ -1,19 +1,19 @@
 /* -----------------------------  Phone Ver. ----------------------------- */
 
 @media only screen and (max-width: 820px) {
-
-
   .user-profile-page {
     height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  
+
   .user-profile-body {
     height: 94vh;
+    width: 100%;
   }
-  
+
   .user-card {
     display: flex;
     justify-content: center;
@@ -21,14 +21,14 @@
     box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.2);
     border-radius: 30px;
     margin: 2%;
-    width: 90vw;
+    width: 100%;
   }
-  
+
   .user-card > div:nth-child(1) {
     border: 1px solid #eee;
     border-radius: 50%;
   }
-  
+
   .username {
     display: flex;
     justify-content: center;
@@ -37,7 +37,7 @@
     font-size: 7vmin;
     font-weight: 300;
   }
-  
+
   .user-pet-profile-container {
     height: 73vh;
     display: flex;
@@ -45,22 +45,22 @@
     align-items: center;
     overflow: scroll;
   }
-  
+
   .pet-profile-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     overflow: scroll;
   }
-  
-  .pet-profile-weight-container{
+
+  .pet-profile-weight-container {
     text-align: center;
   }
-  
+
   .pet-profile-weight {
-    font-weight: 250  ;
+    font-weight: 250;
   }
-  
+
   .user-pet-profile {
     background-color: #f9f2f1;
     width: 85vw;
@@ -70,13 +70,13 @@
     flex-direction: row;
     margin: 2% 0;
   }
-  
+
   .pet-name {
     font-size: 6vmin;
     font-weight: 250;
     margin: 2px;
   }
-  
+
   .add-pet {
     margin: 15px;
     width: 80vw;
@@ -85,33 +85,33 @@
     display: flex;
     justify-content: center;
   }
-  
+
   .user-icon {
     border-radius: 50%;
     width: 100px;
     height: 100px;
   }
-  
+
   .user-pet-icon {
     border-radius: 50%;
     width: 100px;
     height: 100px;
   }
-  
+
   .user-emtpy-pet-icon {
     border-radius: 50%;
     width: 100px;
     height: 100px;
     background-color: gray;
   }
-  
+
   .pet-image {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 40%;
   }
-  
+
   .pet-detail {
     width: 60%;
     padding: 2%;
@@ -122,12 +122,12 @@
       justify-content: space-between;
       align-items: flex-start; */
   }
-  
+
   .pet-tag-container {
     display: flex;
     margin: 2px;
   }
-  
+
   .pet-species-tag-chi {
     background-color: #ffebcd;
     font-size: 15px;
@@ -136,16 +136,16 @@
     height: 20px;
     padding: 6px 14px 7px;
   }
-  
+
   .pet-tag-gender {
-      background-color: #ffebcd;
-      font-size: 15px;
-      color: #9b8769;
-      border-radius: 30px;
-      height: 20px;
-      padding: 6px 14px 7px;
-    }
-  
+    background-color: #ffebcd;
+    font-size: 15px;
+    color: #9b8769;
+    border-radius: 30px;
+    height: 20px;
+    padding: 6px 14px 7px;
+  }
+
   .pet-age {
     background-color: #e0cdff;
     border-radius: 30px;
@@ -154,7 +154,7 @@
     padding: 6px 14px 7px;
     color: #7c699b;
   }
-  
+
   .user-add-pet-container {
     background-color: #f7f1f0;
     width: 85vw;
@@ -162,7 +162,7 @@
     border-radius: 65px;
     margin: 2%;
   }
-  
+
   .user-add-pet {
     color: #ccd9e2;
     display: flex;
@@ -171,180 +171,197 @@
     font-size: 15vmin;
     height: 13vh;
   }
-  }
-
-
+}
 
 /* -----------------------------  Pad Ver. ----------------------------- */
-@media only screen and (min-width: 821px) {
-    .user-profile-page {
-        height: 100vh;
-      }
-      
-      .user-profile-body {
-      
-        height: 94vh;
-      }
-      
-      .user-card {
-        display: flex;
-        justify-content: center;
-        background-color: #f7f1f0;
-        box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.2);
-        border-radius: 30px;
-        width: 80vw;
-        margin: 2%;
-        margin-left: 10vw;
-        /* margin-left: vw; */
-      }
-      
-      .user-card > div:nth-child(1) {
-        border: 1px solid #eee;
-        border-radius: 50%;
-      }
-      
-      .username {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 3%;
-        font-size: 7vmin;
-        font-weight: 300;
-      }
-      
-      .user-pet-profile-container {
-        height: 73vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        overflow: scroll;
-      }
-      
-      .pet-profile-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        overflow: scroll;
-      }
-      
-      .pet-profile-weight-container{
-        text-align: center;
-      }
-      
-      .pet-profile-weight {
-        font-weight: 250  ;
-      }
-      
-      .user-pet-profile {
-        background-color: #f7f1f0;
-        width: 85vw;
-        box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
-        border-radius: 65px;
-        display: flex;
-        flex-direction: row;
-        margin: 2% 0;
-      }
-      
-      .pet-name {
-        font-size: 6vmin;
-        font-weight: 250;
-        margin: 2px;
-      }
-      
-      .add-pet {
-        margin: 15px;
-        width: 80vw;
-        box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
-        border-radius: 15px;
-        display: flex;
-        justify-content: center;
-      }
-      
-      .user-icon {
-        border-radius: 50%;
-        width: 100px;
-        height: 100px;
-      }
-      
-      .user-pet-icon {
-        border-radius: 50%;
-        width: 100px;
-        height: 100px;
-      }
-      
-      .user-emtpy-pet-icon {
-        border-radius: 50%;
-        width: 100px;
-        height: 100px;
-        background-color: gray;
-      }
-      
-      .pet-image {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 40%;
-      }
-      
-      .pet-detail {
-        width: 60%;
-        padding: 2%;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        /* flex-direction: column;
-          justify-content: space-between;
-          align-items: flex-start; */
-      }
-      
-      .pet-tag-container {
-        display: flex;
-        margin: 2px;
-      }
-      
-      .pet-species-tag-chi {
-        background-color: #ffebcd;
-        font-size: 15px;
-        color: #9b8769;
-        border-radius: 30px;
-        height: 20px;
-        padding: 6px 14px 7px;
-      }
-      
-      .pet-tag-gender {
-          background-color: #ffebcd;
-          font-size: 15px;
-          color: #9b8769;
-          border-radius: 30px;
-          height: 20px;
-          padding: 6px 14px 7px;
-        }
-      
-      .pet-age {
-        background-color: #e0cdff;
-        border-radius: 30px;
-        font-size: 15px;
-        height: 20px;
-        padding: 6px 14px 7px;
-        color: #7c699b;
-      }
-      
-      .user-add-pet-container {
-        background-color: #f7f1f0;
-        width: 85vw;
-        box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
-        border-radius: 65px;
-        margin: 2%;
-      }
-      
-      .user-add-pet {
-        color: #ccd9e2;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 15vmin;
-        height: 13vh;
-      }
+
+@media only screen and (min-width: 500px) {
+  .user-pet-profile {
+    border-radius: 150px;
+    width: 70vw;
+    height: 20vh;
+  }
+  .user-add-pet-container {
+    width: 70vw;
+    border-radius: 150px;
+  }
+
+  .user-add-pet {
+    height: 20vh;
+  }
 
 }
 
+/* -----------------------------  Pad Ver. ----------------------------- */
+@media only screen and (min-width: 821px) {
+  .user-profile-page {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .user-profile-body {
+    height: 94vh;
+  }
+
+  .user-card {
+    display: flex;
+    justify-content: center;
+    background-color: #f7f1f0;
+    box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.2);
+    border-radius: 30px;
+    width: 80vw;
+    margin: 2%;
+    margin-left: 10vw;
+    /* margin-left: vw; */
+  }
+
+  .user-card > div:nth-child(1) {
+    border: 1px solid #eee;
+    border-radius: 50%;
+  }
+
+  .username {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 3%;
+    font-size: 7vmin;
+    font-weight: 300;
+  }
+
+  .user-pet-profile-container {
+    height: 73vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: scroll;
+  }
+
+  .pet-profile-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: scroll;
+  }
+
+  .pet-profile-weight-container {
+    text-align: center;
+  }
+
+  .pet-profile-weight {
+    font-weight: 250;
+  }
+
+  .user-pet-profile {
+    background-color: #f7f1f0;
+    width: 50vw;
+    box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
+    border-radius: 65px;
+    display: flex;
+    flex-direction: row;
+    margin: 2% 0;
+  }
+
+  .pet-name {
+    font-size: 6vmin;
+    font-weight: 250;
+    margin: 2px;
+  }
+
+  .add-pet {
+    margin: 15px;
+    width: 80vw;
+    box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .user-icon {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+  }
+
+  .user-pet-icon {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+  }
+
+  .user-emtpy-pet-icon {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    background-color: gray;
+  }
+
+  .pet-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+  }
+
+  .pet-detail {
+    width: 60%;
+    padding: 2%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    /* flex-direction: column;
+          justify-content: space-between;
+          align-items: flex-start; */
+  }
+
+  .pet-tag-container {
+    display: flex;
+    margin: 2px;
+  }
+
+  .pet-species-tag-chi {
+    background-color: #ffebcd;
+    font-size: 15px;
+    color: #9b8769;
+    border-radius: 30px;
+    height: 20px;
+    padding: 6px 14px 7px;
+  }
+
+  .pet-tag-gender {
+    background-color: #ffebcd;
+    font-size: 15px;
+    color: #9b8769;
+    border-radius: 30px;
+    height: 20px;
+    padding: 6px 14px 7px;
+  }
+
+  .pet-age {
+    background-color: #e0cdff;
+    border-radius: 30px;
+    font-size: 15px;
+    height: 20px;
+    padding: 6px 14px 7px;
+    color: #7c699b;
+  }
+
+  .user-add-pet-container {
+    background-color: #f7f1f0;
+    width: 50vw;
+    box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
+    border-radius: 65px;
+    margin: 2%;
+  }
+
+  .user-add-pet {
+    color: #ccd9e2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 15vmin;
+    height: 20vh;
+  }
+}
