--- a/development/frontend/src/pages/pet/css/Vaccine.css
+++ b/development/frontend/src/pages/pet/css/Vaccine.css
@@ -71,6 +71,14 @@
 }
 /* -----------------------------  Pad Ver. ----------------------------- */
 @media only screen and (min-width: 821px) {
+
+  .vaccine-page {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .vaccine-body {
     text-align: center;
   }
@@ -85,8 +93,8 @@
     margin-top: 5%;
     border: 2px solid #f0dcda;
     border-radius: 20px;
-    width: 80vw;
-    height: 80vw;
+    width: 30vw;
+    height: 30vw;
   }
 
   .add-vaccine-button {
