--- a/development/frontend/src/components/Header.css
+++ b/development/frontend/src/components/Header.css
@@ -1,35 +1,38 @@
 @media only screen and (min-width: 821px) {
   .header {
     /* border: 2px solid rgb(255, 0, 144); */
-    background-color: rgb(128, 196, 255);
+    background-color: #f0dcda;
     height: 7vh;
     width: 821px;
     display: flex;
+    justify-content: flex-end;
     align-items: center;
     top: 0;
   }
 
+  .headerLogo {
+    height: 100%;
+    margin-right: 27%;
+  }
+
   .previousPage {
-    /* border: 2px solid rgb(68, 19, 47); */
-    font-size: 4vmin;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 2vw;
-    margin-right: 41vw;
+    font-size: 2vmax;
+    margin-top: 0.3%;
   }
 
   .logOut {
     /* border: 2px solid rgb(68, 19, 47); */
     display: flex;
-    justify-content: space-around;
-    font-size: 4vmin;
-    width: 8vw;
+    font-size: 2vmax;
+    margin-left: 65%;
+    margin-right: 13%;
+    margin-top: 0.5%;
   }
 
   .logoutCard {
     background-color: aliceblue;
-    border: 2px solid rgb(0, 0, 0);
+    /* border: 2px solid rgb(0, 0, 0); */
     border-radius: 15px;
     position: absolute;
     top: 7.5vh;
@@ -47,30 +50,37 @@
 @media only screen and (max-width: 820px) {
   .header {
     /* border: 2px solid rgb(255, 0, 144); */
-    background-color: rgb(128, 196, 255);
+    background-color: #f0dcda;
     height: 5vh;
     width: 100vw;
     display: flex;
+    justify-content: flex-end;
     align-items: center;
-    justify-content: flex-start;
     top: 0;
   }
 
+  .headerLogo {
+    height: 100%;
+    margin-right: 27%;
+  }
+
+  .headerLogo img {
+    height: 100%;
+  }
+
   .previousPage {
-    /* border: 2px solid rgb(68, 19, 47); */
-    font-size: 4vmin;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 5%;
-    margin-right: 80%;
+    font-size: 3vmax;
+    margin-top: 0.3%;
   }
 
   .logOut {
     /* border: 2px solid rgb(68, 19, 47); */
     display: flex;
-    justify-content: flex-end;
     font-size: 3vmax;
+    margin-left: 65%;
+    margin-right: 13%;
+    /* margin-top: 1%; */
   }
 
   .logoutCard {
@@ -78,12 +88,14 @@
     border: 2px solid rgb(0, 0, 0);
     border-radius: 15px;
     position: absolute;
-    top: 5.5vh;
+    top: 5.4vh;
     right: 0.6vw;
     width: 30vw;
     height: 45vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     z-index: 1000000;
   }
 }
@@ -93,28 +105,35 @@
 @media only screen and (max-width: 767px) {
   .header {
     /* border: 2px solid rgb(255, 0, 144); */
-    background-color: rgb(128, 196, 255);
+    background-color: #f0dcda;
     height: 6vh;
     width: 100vw;
     display: flex;
+    justify-content: flex-end;
     align-items: center;
-    justify-content: space-around;
-    top: 0;
+  }
+
+  .headerLogo {
+    height: 100%;
+  }
+
+  .headerLogo img {
+    height: 100%;
   }
 
   .previousPage {
-    /* border: 2px solid rgb(68, 19, 47); */
-    font-size: 4vmin;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    font-size: 3vmax;
+    margin-top: 1.5%;
   }
 
   .logOut {
     /* border: 2px solid rgb(68, 19, 47); */
     display: flex;
-    justify-content: flex-end;
     font-size: 3vmax;
+    margin-left: 65%;
+    margin-right: 12%;
+    margin-top: 2%;
   }
 
   .logoutCard {
