fix login and register css

--- a/development/frontend/src/pages/auth/css/Register.css
+++ b/development/frontend/src/pages/auth/css/Register.css
@@ -22,3 +22,11 @@
     border-radius: 30px;
 
 }
+.mantine-1g14e8k,.mantine-ye2q1m {
+    border: 1px solid #c3a6a0;
+    border-radius: 8px;
+}
+.mantine-titt6i {
+    border: 1px solid #c3a6a0;
+    border-radius: 8px;
+}
