--- a/development/frontend/src/pages/auth/css/Login.css
+++ b/development/frontend/src/pages/auth/css/Login.css
@@ -22,7 +22,13 @@
 
   .goRegister {
     margin-top: 20px;
+    font-weight: 300;
   }
+}
+.login-submit-button{
+  background: #f2968f;
+  border-radius: 30px;
+
 }
 
 /* ----------------------------- Laptop Ver. ----------------------------- */
@@ -43,11 +49,20 @@
     flex-direction: column;
     align-items: center;
   }
+  .goRegister {
+    margin: 10px;
 
+    font-weight: 300;
+  }
   /* .loginLogo {
     margin-top: 10vh;
     margin-bottom: 10vh;
   } */
+  .login-submit-button{
+    background: #f2968f;
+    border-radius: 30px;
+  
+  }
 }
 
 /* -----------------------------  Phone Ver. ----------------------------- */
@@ -72,5 +87,10 @@
   .loginLogo {
     margin-top: 10vh;
     margin-bottom: 10vh;
+  }
+  .login-submit-button{
+    background: #f2968f;
+    border-radius: 30px;
+  
   }
 }
