--- a/development/frontend/src/pages/place/css/PlaceDetail.css
+++ b/development/frontend/src/pages/place/css/PlaceDetail.css
@@ -54,15 +54,70 @@
   }
 
   .placeDetailInfo {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     border-radius: 40px;
+    background-color: white;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    padding: 2%;
     position: sticky;
     top: 10px;
-    height: 360px;
+    height: 100%;
     width: 35%;
+  }
+
+  .placeDetailName {
+    border: 2px solid black;
+    height: 20%;
+    width: 100%;
+    font-size: 3vmax;
+    font-weight: 700;
+  }
+
+  .placeDetailNameArea,
+  .placeDetailAddressArea,
+  .placeDetailPhoneArea,
+  .placeDetailDistrictArea,
+  .placeDetailThumbArea {
+    display: flex;
+    margin-bottom: 3%;
+  }
+
+  .placeDetailNameLogo,
+  .placeDetailAddressLogo,
+  .placeDetailPhoneLogo,
+  .placeDetailDistrictLogo,
+  .placeDetailThumbLogo {
+    display: flex;
+    align-items: center;
+    font-size: 2vmax;
+    margin-right: 3%;
+  }
+
+  .placeDetailAddress,
+  .placeDetailPhone,
+  .placeDetailDistrict,
+  .placeDetailThumb {
+    border: 2px solid black;
+    height: 10%;
+    width: 100%;
+    font-size: 1vmax;
+    font-weight: 500;
+  }
+
+  .placeDetailDistrict {
+    height: 10%;
+    width: 100%;
+  }
+
+  .placeDetailWH {
+    border: 2px solid black;
+    height: 10%;
+    width: 100%;
+    font-size: 1vmax;
+    font-weight: 400;
+    display: flex;
+    justify-content: space-between;
   }
 
   .mantine-8nr514 {
