--- a/development/frontend/src/pages/InitialLanding.css
+++ b/development/frontend/src/pages/InitialLanding.css
@@ -8,7 +8,7 @@
   }
 
   .initialLandingContainer {
-    border: 2px solid black;
+    border: 2px solid rgba(0, 0, 0, 0.226);
     background: #f7f1f0;
     border-radius: 25px;
     display: flex;
