--- a/development/frontend/src/pages/pet/css/Vaccine.css
+++ b/development/frontend/src/pages/pet/css/Vaccine.css
@@ -33,10 +33,16 @@
   .vaccine-upload-container {
     text-align: center;
     height: 20vh;
+    /* border: 1px solid black; */
+    position: relative;
+    bottom: 20%;
   }
   .vaccine-upload-tille {
     font-size: 8vmin;
     /* width: 85vw; */
+  }
+  .mantine-1dcetaa {
+    display: none;
   }
 
   .mantine-121w2fi {
@@ -61,13 +67,16 @@
     margin-top: 2vmin;
     background: #f2968f;
     border-radius: 30px;
+
   }
   .mantine-rqmd87 {
     border-radius: 30px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    width: 60vw;
+    height: 50vw;
   }
+
 }
 /* -----------------------------  Pad Ver. ----------------------------- */
 @media only screen and (min-width: 821px) {
@@ -126,7 +135,6 @@
     color: #7c699b;
     border-radius: 30px;
     padding-top: 2%;
-    margin-left: 8vw;
   }
 
   .upload-vaccine-button {
@@ -137,5 +145,15 @@
     background: #f2968f;
     border-radius: 30px;
   }
-
+  .mantine-rqmd87 {
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50vw;
+    height: 30vw;
+  }
+  .mantine-1dcetaa {
+    display: none;
+  }
 }
