--- a/development/frontend/src/pages/user/css/UserProfile.css
+++ b/development/frontend/src/pages/user/css/UserProfile.css
@@ -17,10 +17,10 @@
   .user-card {
     display: flex;
     justify-content: center;
-    background-color: #fef7f6;
-    box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.2);
+    /* background-color: #fef7f6;
+    box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.2); */
     border-radius: 50px;
-    margin: 2%;
+    margin: 8%;
     width: 85vw;
     height: 12vh;
   }
@@ -28,12 +28,18 @@
   .username {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
-    margin: 3%;
+    /* margin: 3%; */
     font-size: 7vmin;
     font-weight: 300;
   }
-
+/* .username-icon-area{
+  margin: 10px;
+} */
+.username-name{
+  font-weight: 200;
+}
   .user-pet-profile-container {
     height: 73vh;
     display: flex;
@@ -215,12 +221,25 @@
   .user-card {
     display: flex;
     justify-content: center;
-    background-color: #f7f1f0;
-    box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.2);
+    /* background-color: #f7f1f0;
+    box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.2); */
     border-radius: 150px;
     width: 50vw;
-    margin: 2%;
+    margin: 5%;
   
+  }
+  .username-name{
+    font-weight: 200;
+  }
+
+  .username {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    /* margin: 3%; */
+    font-size: 7vmin;
+    font-weight: 300;
   }
 
   .user-card > div:nth-child(1) {
