--- a/development/frontend/src/pages/place/css/PlaceDetail.css
+++ b/development/frontend/src/pages/place/css/PlaceDetail.css
@@ -24,12 +24,12 @@
   }
 
   .placeDetailPreviewPicture {
-    border: 2px solid rgb(255, 200, 0);
+    /* border: 2px solid rgb(255, 200, 0); */
     border-radius: 40px;
     overflow: hidden;
     display: flex;
     justify-content: center;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
 
   .placeDetailPreviewPicture img {
@@ -37,16 +37,44 @@
   }
 
   .placeDetailEachComment {
-    border: 2px solid rgb(0, 170, 255);
-    border-radius: 40px;
-    margin-bottom: 20px;
-    padding: 10px 0 10px 0;
+    /* border: 2px solid rgb(0, 170, 255); */
+    /* background-color: #ffebcd; */
+    /* border-radius: 40px; */
+    margin-bottom: 30px;
+    padding: 10px 0 40px 0;
+    border-bottom: 1px solid;
+  }
+
+  .placeDetailCommentContainer {
+    width: 470px;
+  }
+
+  .placeDetailEachCommentName {
+    margin: 0 20px 10px 20px;
+    font-size: 1.2vmax;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    color: rgb(255, 174, 0);
+  }
+
+  .placeDetailEachCommentTitle {
+    margin: 0 20px 10px 20px;
+    font-size: 1.4vmax;
+    font-weight: 500;
+  }
+
+  .placeDetailEachCommentLike {
+    margin: 0 20px 10px 20px;
+    font-size: 1.8vmax;
+    /* border-bottom: 1px solid; */
   }
 
   .placeDetailEachCommentColumn {
     /* border: 2px solid rgb(255, 200, 0); */
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: 0 20px 10px 20px;
+    font-size: 1.2vmax;
+    font-weight: 300;
   }
 
   .placeDetailEachCommentPicture {
@@ -55,8 +83,8 @@
 
   .placeDetailInfo {
     /* border: 2px solid black; */
-    border-radius: 40px;
-    background-color: white;
+    border-radius: 20px;
+    background-color: #f2d6e379;
     display: flex;
     flex-direction: column;
     padding: 2%;
@@ -67,7 +95,7 @@
   }
 
   .placeDetailName {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 20%;
     width: 100%;
     font-size: 3vmax;
@@ -111,18 +139,14 @@
   }
 
   .placeDetailWH {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 10%;
     width: 100%;
-    font-size: 1vmax;
+    font-size: 1.1vmax;
     font-weight: 400;
     display: flex;
     justify-content: space-between;
-  }
-
-  .mantine-8nr514 {
-    padding: 0;
-    width: 140px;
+    margin-top: 10px;
   }
 }
 
