--- a/development/frontend/src/components/Header.css
+++ b/development/frontend/src/components/Header.css
@@ -32,16 +32,19 @@
 
   .logoutCard {
     background-color: aliceblue;
-    /* border: 2px solid rgb(0, 0, 0); */
+    border: 2px solid rgb(241, 234, 234);
     border-radius: 15px;
     position: absolute;
-    top: 7.5vh;
-    right: 23.5vw;
-    width: 18%;
-    height: 500px;
+    top: 6.5vh;
+    /* right: 23.5vw; */
+    width: 30vw;
+    height: 12vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     z-index: 1000000;
+    font-weight: 200;
   }
 }
 
@@ -54,14 +57,14 @@
     height: 5vh;
     width: 100vw;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     top: 0;
   }
 
   .headerLogo {
     height: 100%;
-    margin-right: 27%;
+    /* margin-right: 27%; */
   }
 
   .headerLogo img {
@@ -72,6 +75,7 @@
     display: flex;
     font-size: 3vmax;
     margin-top: 0.3%;
+    margin-left: 6%;
   }
 
   .logOut {
@@ -79,24 +83,25 @@
     display: flex;
     font-size: 3vmax;
     margin-left: 65%;
-    margin-right: 13%;
+    margin-right: 7%;
     /* margin-top: 1%; */
   }
 
   .logoutCard {
     background-color: aliceblue;
-    border: 2px solid rgb(0, 0, 0);
+    border: 2px solid rgb(241, 234, 234);
     border-radius: 15px;
     position: absolute;
-    top: 5.4vh;
+    top: 5vh;
     right: 0.6vw;
     width: 30vw;
-    height: 45vh;
+    height: 12vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     z-index: 1000000;
+    font-weight: 200;
   }
 }
 
@@ -109,7 +114,7 @@
     height: 6vh;
     width: 100vw;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
   }
 
@@ -125,6 +130,7 @@
     display: flex;
     font-size: 3vmax;
     margin-top: 1.5%;
+    margin-left: 5%;
   }
 
   .logOut {
@@ -132,21 +138,22 @@
     display: flex;
     font-size: 3vmax;
     margin-left: 65%;
-    margin-right: 12%;
+    margin-right: 5%;
     margin-top: 2%;
   }
 
   .logoutCard {
     background-color: aliceblue;
-    border: 2px solid rgb(0, 0, 0);
+    border: 2px solid rgb(241, 234, 234);
     border-radius: 15px;
     position: absolute;
-    top: 6.6vh;
-    right: 1vw;
+    /* top: 6.6vh;
+    right: 1vw; */
     width: 50vw;
-    height: 45vh;
+    height: 10vh;
     display: flex;
     justify-content: center;
     z-index: 1000000;
+    font-weight: 200;
   }
 }
