--- a/development/frontend/src/components/place/list/placeCard.css
+++ b/development/frontend/src/components/place/list/placeCard.css
@@ -1,17 +1,158 @@
+@media only screen and (min-width: 821px) {
+  .card {
+    /* border: 3px solid black; */
+    background-color: #c3a6a0;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    height: 26vh;
+    margin: 5% 5%;
+    box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.224);
+  }
+  .picture {
+    border: 1px solid #eee;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45%;
+  }
+  .previewPicture {
+    border-radius: 20px 0 0 20px;
+    width: 15vmin;
+    position: relative;
+  }
+  .info {
+    /* border: 3px solid rgb(140, 0, 255); */
+    /* border-radius: 0 20px 20px 0; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 2%;
+    width: 55%;
+  }
+  .chiName {
+    font-size: 3.5vmin;
+    font-weight: 500;
+  }
+  .engName {
+    font-size: 2vmin;
+    font-weight: 300;
+  }
+  .district {
+    font-size: 1vmin;
+    background-color: #a15c38;
+    border-radius: 30px;
+    height: 2vh;
+    padding:3%;
+    color: #29201b;
+  }
+  .mapType {
+    font-size: 1vmin;
+    background-color: #403234;
+    color: rgb(226, 196, 152);
+    border-radius: 30px;
+    height: 2vh;
+    padding: 3% ;
+  }
+  
+  .cardMargin {
+    margin-top: 2.5%;
+  }
+}
+
+
+
+
+/* ----------------------------- Laptop Ver. ----------------------------- */
+
+@media only screen and (max-width: 820px) {
+  .card {
+    /* border: 3px solid black; */
+    background-color: #c3a6a0;
+    border-radius: 50px;
+    display: flex;
+    justify-content: space-between;
+    height: 25vh;
+    margin: 7% 5%;
+    box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.224);
+  }
+  .picture {
+    border: 1px solid #eee;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45%;
+  }
+  .previewPicture {
+    border-radius: 20px 0 0 20px;
+    height: 29vmin;
+    width: 15vmin;
+    position: relative;
+  }
+  .info {
+    /* border: 3px solid rgb(140, 0, 255); */
+    /* border-radius: 0 20px 20px 0; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 2%;
+    width: 55%;
+  }
+  .chiName {
+    font-size: 4vmin;
+    font-weight: 500;
+  }
+  .engName {
+    font-size: 2.5vmin;
+    font-weight: 300;
+  }
+  .district {
+    font-size: 2vmin;
+    background-color: #a15c38;
+    border-radius: 30px;
+    height: 2vh;
+    padding: 2% 4.5%;
+    color: #29201b;
+  }
+  .mapType {
+    font-size: 2vmin;
+    background-color: #403234;
+    color: rgb(226, 196, 152);
+    border-radius: 30px;
+    height: 2vh;
+    padding: 2% 4.5%;
+  }
+  
+  .cardMargin {
+    margin-top: 2.5%;
+  }
+}
+
+
+
+/* -----------------------------  Phone Ver. ----------------------------- */
+@media only screen and (max-width: 767px) {
 .card {
-  border: 3px solid black;
+  /* border: 3px solid black; */
+  background-color: #c3a6a0;
   border-radius: 20px;
   display: flex;
   justify-content: space-between;
-  height: 32vmin;
+  height: 20vh;
+  margin: 7% 5%;
+  box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
 }
 .picture {
-  border: 3px solid rgb(255, 0, 0);
-  border-radius: 20px 0 0 20px;
+  border: 1px solid #eee;
+  border-radius: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 25%;
+  width: 45%;
 }
 .previewPicture {
   border-radius: 20px 0 0 20px;
@@ -20,31 +161,41 @@
   position: relative;
 }
 .info {
-  border: 3px solid rgb(140, 0, 255);
-  border-radius: 0 20px 20px 0;
+  /* border: 3px solid rgb(140, 0, 255); */
+  /* border-radius: 0 20px 20px 0; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  width: 73%;
+  padding: 3%;
+  width: 55%;
 }
 .chiName {
-  margin-bottom: 1vmin;
   font-size: 5vmin;
-  font-weight: bold;
+  font-weight: 500;
 }
 .engName {
-  margin-bottom: 1vmin;
   font-size: 2vmin;
 }
 .district {
-  margin-bottom: 1vmin;
   font-size: 2vmin;
+  background-color: #a15c38;
+  border-radius: 30px;
+  height: 2vh;
+  padding: 2% 4.5%;
+  color: #29201b;
 }
 .mapType {
   font-size: 2vmin;
+  background-color: #403234;
+  color: rgb(226, 196, 152);
+  border-radius: 30px;
+  height: 2vh;
+  padding: 2% 4.5%;
 }
 
 .cardMargin {
   margin-top: 2.5%;
 }
+}
+
