--- a/development/frontend/src/pages/InitialLanding.css
+++ b/development/frontend/src/pages/InitialLanding.css
@@ -52,7 +52,7 @@
   }
 
   .initialLandingLogin button {
-    background-color: #ce294d;
+    background-color: rgb(176,60,70);;
     border: none;
     color: white;
     width: 25vmin;
@@ -77,7 +77,7 @@
     align-items: center;
     position: fixed;
     top: 0vmax;
-    background: #e7d0d5;
+    background: #f8e3e4;
     /* background: #f6eabc; */
     position: relative;
     width: 900px;
@@ -146,7 +146,7 @@
   }
 
   .initialLandingLogin button {
-    background-color: #bf1858;
+    background-color: rgb(176,60,70);;
     border: none;
     color: white;
     width: 25vmin;
@@ -158,9 +158,9 @@
     margin: 4px 2px;
     cursor: pointer;
     border-radius: 46px;
-    font-family: "Source Code Pro", monospace;
+    /* font-family: "Source Code Pro", monospace; */
     font-size: 3vmin;
-    font-weight: 700;
+    font-weight: 600;
   }
 
   .initialLandingovalArea {
@@ -171,7 +171,7 @@
     align-items: center;
     position: fixed;
     top: 5vmax;
-    background: #ffebcd;
+    background: #f8e3e4;
     /* background: #f6eabc; */
     position: relative;
     width: 900px;
@@ -240,7 +240,7 @@
   }
 
   .initialLandingLogin button {
-    background-color: #bf1858;
+    background-color: rgb(176,60,70);
     border: none;
     color: white;
     width: 30vmin;
@@ -252,9 +252,9 @@
     margin: 4px 2px;
     cursor: pointer;
     border-radius: 46px;
-    font-family: "Source Code Pro", monospace;
+    /* font-family: "Source Code Pro", monospace; */
     font-size: 3vmin;
-    font-weight: 700;
+    font-weight: 600;
   }
 
   .initialLandingovalArea {
@@ -265,7 +265,7 @@
     align-items: center;
     position: fixed;
     top: 0vmax;
-    background: #ffebcd;
+    background: #f8e3e4;
     /* background: #f6eabc; */
     position: relative;
     width: 600px;
