--- a/development/frontend/src/pages/auth/css/Register.css
+++ b/development/frontend/src/pages/auth/css/Register.css
@@ -1,19 +1,32 @@
+@media only screen and (min-width: 821px) {
+    .register-body{
+        height: 50vh;
+        width: 100%vw;
+        overflow: scroll;
+    }
+}
+
+.register-page{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+}
 .register-body{
     text-align: center;
     font-weight: 300;
-}
+    height: 86vh;
 
-.register-title{
-    margin-top: 5vmin;
 }
 
 .register-form{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 80vw;
     /* border:5px solid black; */
-    margin: 5vmin;
-    padding: 4vmin;
+    margin: 4vmin;
+    padding: 3%;
     border-radius: 30px;
     background-color: white;
 }
