--- a/development/frontend/src/pages/pet/css/GrowTree.css
+++ b/development/frontend/src/pages/pet/css/GrowTree.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 820px) {
   .growTreePageContainer {
-    /* border: 3px solid black; */
+    border: 3px solid black;
     display: flex;
     justify-content: center;
     background-image: url("/src/assets/128.png");
@@ -9,7 +9,7 @@
   }
 
   .treeContainer {
-    border: 3px solid rgb(0, 174, 255);
+    /* border: 3px solid rgb(0, 174, 255); */
     display: flex;
     flex-direction: column;
     overflow: scroll;
@@ -35,6 +35,11 @@
   .rightPhoto {
     border: 3px solid rgb(255, 191, 0);
     margin-bottom: 10px;
+  }
+
+  .footer {
+    position: fixed;
+    left: 20%;
   }
 
   /* //////////////cat foot//////////// */
