--- a/development/frontend/src/pages/place/css/PlaceDetail.css
+++ b/development/frontend/src/pages/place/css/PlaceDetail.css
@@ -25,7 +25,7 @@
 
   .placeDetailPreviewPicture {
     /* border: 2px solid rgb(255, 200, 0); */
-    border-radius: 40px;
+    border-radius: 15px;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -42,7 +42,7 @@
     /* border-radius: 40px; */
     margin-bottom: 30px;
     padding: 10px 0 40px 0;
-    border-bottom: 1px solid;
+    border-bottom: 1px ridge;
   }
 
   .placeDetailCommentContainer {
@@ -83,8 +83,8 @@
 
   .placeDetailInfo {
     /* border: 2px solid black; */
-    border-radius: 20px;
-    background-color: #f2d6e379;
+    border-radius: 10px;
+    background-color: #e3d4db79;
     display: flex;
     flex-direction: column;
     padding: 2%;
@@ -99,7 +99,7 @@
     height: 20%;
     width: 100%;
     font-size: 3vmax;
-    font-weight: 700;
+    font-weight: 500;
   }
 
   .placeDetailNameArea,
@@ -126,7 +126,7 @@
   .placeDetailPhone,
   .placeDetailDistrict,
   .placeDetailThumb {
-    border: 2px solid black;
+    /* border:1px solid black; */
     height: 10%;
     width: 100%;
     font-size: 1vmax;
