--- a/development/frontend/src/pages/user/css/UserProfile.css
+++ b/development/frontend/src/pages/user/css/UserProfile.css
@@ -20,9 +20,9 @@
     /* background-color: #fef7f6;
     box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.2); */
     border-radius: 50px;
-    margin: 8%;
+    margin: 3%;
     width: 85vw;
-    height: 12vh;
+    height: 40vw;
   }
 
   .username {
