fix some color style

--- a/development/frontend/src/pages/LandingPage.css
+++ b/development/frontend/src/pages/LandingPage.css
@@ -33,7 +33,7 @@
     background-color: #eacfcc;
     height: 5.5vh;
     width: 4.5vw;
-    color: rgba(0, 0, 0, 0.849);
+    color: #9b6972;
   }
 
   .tagButtonInLanding {
@@ -98,7 +98,7 @@
     background-color: #eacfcc;
     border-radius: 100px;
     font-size: 2vmax;
-    color: rgba(0, 0, 0, 0.849);
+    color: #9b6972;
   }
 
   .tagButtonInLanding {
@@ -171,7 +171,7 @@
     background-color: #eacfcc;
     border-radius: 100px;
     font-size: 2vmax;
-    color: rgba(0, 0, 0, 0.849);
+    color: #9b6972;
   }
 
   .tagButtonInLanding {
