--- a/development/frontend/src/components/place/list/PlaceCard.css
+++ b/development/frontend/src/components/place/list/PlaceCard.css
@@ -2,25 +2,25 @@
   .card {
     /* border: 3px solid black; */
     background-color: #c3a6a0;
-    border-radius: 10px;
+    border-radius: 20px;
     display: flex;
     justify-content: space-between;
-    height: 26vh;
+    height: 30vh;
     margin: 5% 5%;
     box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.224);
   }
   .picture {
-    border: 1px solid #eee;
+    /* border: 1px solid #eee; */
     border-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 45%;
+    overflow: hidden;
   }
   .previewPicture {
-    border-radius: 20px 0 0 20px;
-    width: 15vmin;
-    position: relative;
+    width: 100%;
+    height: 100%;
   }
   .info {
     /* border: 3px solid rgb(140, 0, 255); */
@@ -45,7 +45,7 @@
     background-color: #a15c38;
     border-radius: 30px;
     height: 2vh;
-    padding:3%;
+    padding: 3%;
     color: #29201b;
   }
   .mapType {
@@ -54,16 +54,13 @@
     color: rgb(226, 196, 152);
     border-radius: 30px;
     height: 2vh;
-    padding: 3% ;
+    padding: 3%;
   }
-  
+
   .cardMargin {
     margin-top: 2.5%;
   }
 }
-
-
-
 
 /* ----------------------------- Laptop Ver. ----------------------------- */
 
@@ -71,27 +68,103 @@
   .card {
     /* border: 3px solid black; */
     background-color: #c3a6a0;
-    border-radius: 50px;
+    border-radius: 20px;
     display: flex;
     justify-content: space-between;
-    height: 25vh;
-    margin: 7% 5%;
+    height: 24vh;
+    width: 63vw;
+    margin-bottom: 20%;
     box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.224);
   }
   .picture {
-    border: 1px solid #eee;
+    /* border: 1px solid #eee; */
     border-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 45%;
+    height: 100%;
+    overflow: hidden;
   }
+
   .previewPicture {
-    border-radius: 20px 0 0 20px;
-    height: 29vmin;
-    width: 15vmin;
-    position: relative;
+    width: 100%;
+    height: 100%;
   }
+
+  .info {
+    /* border: 3px solid rgb(140, 0, 255); */
+    /* border-radius: 0 20px 20px 0; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 2%;
+    width: 55%;
+  }
+  .chiName {
+    font-size: 3vmin;
+    font-weight: 500;
+  }
+  .engName {
+    font-size: 2vmin;
+    font-weight: 300;
+  }
+  .district {
+    font-size: 2vmin;
+    background-color: #a15c38;
+    border-radius: 30px;
+    color: #29201b;
+    height: 2vh;
+    width: 20vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .mapType {
+    font-size: 1vmin;
+    background-color: #403234;
+    color: rgb(226, 196, 152);
+    border-radius: 20px;
+    height: 1.5vh;
+    width: 12vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .cardMargin {
+    margin-top: 2.5%;
+  }
+}
+
+/* -----------------------------  Phone Ver. ----------------------------- */
+@media only screen and (max-width: 767px) {
+  .card {
+    /* border: 3px solid black; */
+    background-color: #c3a6a0;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    height: 24vh;
+    width: 63vw;
+    margin-top: 10%;
+    box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.224);
+  }
+  .picture {
+    /* border: 1px solid #eee; */
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    overflow: hidden;
+  }
+
+  .previewPicture {
+    width: 100%;
+    height: 100%;
+  }
+
   .info {
     /* border: 3px solid rgb(140, 0, 255); */
     /* border-radius: 0 20px 20px 0; */
@@ -107,95 +180,33 @@
     font-weight: 500;
   }
   .engName {
-    font-size: 2.5vmin;
+    font-size: 2vmin;
     font-weight: 300;
   }
   .district {
-    font-size: 2vmin;
+    font-size: 1vmin;
     background-color: #a15c38;
     border-radius: 30px;
-    height: 2vh;
-    padding: 2% 4.5%;
     color: #29201b;
+    height: 1.5vh;
+    width: 25vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .mapType {
-    font-size: 2vmin;
+    font-size: 1vmin;
     background-color: #403234;
     color: rgb(226, 196, 152);
-    border-radius: 30px;
-    height: 2vh;
-    padding: 2% 4.5%;
+    border-radius: 20px;
+    height: 1.5vh;
+    width: 14 vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
-  
+
   .cardMargin {
     margin-top: 2.5%;
   }
 }
-
-
-
-/* -----------------------------  Phone Ver. ----------------------------- */
-@media only screen and (max-width: 767px) {
-.card {
-  /* border: 3px solid black; */
-  background-color: #c3a6a0;
-  border-radius: 20px;
-  display: flex;
-  justify-content: space-between;
-  height: 20vh;
-  margin: 7% 5%;
-  box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
-}
-.picture {
-  border: 1px solid #eee;
-  border-radius: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 45%;
-}
-.previewPicture {
-  border-radius: 20px 0 0 20px;
-  height: 29vmin;
-  width: 15vmin;
-  position: relative;
-}
-.info {
-  /* border: 3px solid rgb(140, 0, 255); */
-  /* border-radius: 0 20px 20px 0; */
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 3%;
-  width: 55%;
-}
-.chiName {
-  font-size: 5vmin;
-  font-weight: 500;
-}
-.engName {
-  font-size: 2vmin;
-}
-.district {
-  font-size: 2vmin;
-  background-color: #a15c38;
-  border-radius: 30px;
-  height: 2vh;
-  padding: 2% 4.5%;
-  color: #29201b;
-}
-.mapType {
-  font-size: 2vmin;
-  background-color: #403234;
-  color: rgb(226, 196, 152);
-  border-radius: 30px;
-  height: 2vh;
-  padding: 2% 4.5%;
-}
-
-.cardMargin {
-  margin-top: 2.5%;
-}
-}
-
