--- a/development/frontend/src/pages/pet/css/GrowTree.css
+++ b/development/frontend/src/pages/pet/css/GrowTree.css
@@ -1,3 +1,145 @@
+@media only screen and (min-width: 821px) {
+  .growTreePageContainer {
+    border: 3px solid black;
+    display: flex;
+    justify-content: center;
+    background-image: url("/src/assets/128.png");
+    background-repeat: repeat-y;
+    background-position: center;
+  }
+
+  .treeContainer {
+    /* border: 3px solid rgb(0, 174, 255); */
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+    width: 100%;
+    font-size: 3vmax;
+  }
+
+  .growPictureLeft {
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .growPictureRight {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .leftPhoto {
+    border: 3px solid rgb(255, 114, 182);
+    margin-bottom: 10px;
+    margin-right: 7vw;
+  }
+
+  .rightPhoto {
+    border: 3px solid rgb(255, 191, 0);
+    margin-bottom: 10px;
+    margin-left: 7vw;
+  }
+
+  .footer {
+    position: fixed;
+    left: 20%;
+  }
+
+  /* //////////////cat foot//////////// */
+
+  .paw {
+    width: 30vw;
+    height: 55vh;
+    position: relative;
+    border-radius: 50%;
+    background: #fff;
+    transition: all 0.5s cubic-bezier(0, 0.73, 0.73, 1.52);
+  }
+
+  .paw:before,
+  .paw:after {
+    position: absolute;
+    z-index: 10;
+  }
+
+  .paw:before {
+    content: "";
+    display: block;
+    width: 15%;
+    height: 23%;
+    background: #f2968f58;
+    border-radius: 50% 50% 50% 50%;
+    left: 27%;
+    top: 10%;
+    transform: rotate(-15deg);
+  }
+
+  .paw:after {
+    content: "";
+    display: block;
+    width: 15%;
+    height: 23%;
+    background: #f2968f58;
+    border-radius: 50% 50% 50% 50%;
+    right: 27%;
+    top: 10%;
+    transform: rotate(15deg);
+  }
+
+  .inner {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+
+  .inner:before,
+  .inner:after {
+    position: absolute;
+    z-index: 10;
+  }
+
+  .inner:before {
+    content: "";
+    display: block;
+    width: 14%;
+    height: 19%;
+    background: #f2968f58;
+    border-radius: 70% 70% 50% 50%;
+    /* 60% 60% 40% 40% */
+    left: 10%;
+    top: 28%;
+    transform: rotate(-50deg);
+  }
+
+  .inner:after {
+    content: "";
+    display: block;
+    width: 14%;
+    height: 19%;
+    background: #f2968f58;
+    border-radius: 70% 70% 50% 50%;
+    right: 10%;
+    top: 28%;
+    transform: rotate(50deg);
+  }
+
+  .left,
+  .right {
+    width: 21vw;
+    height: 31vh;
+    border-radius: 70% 70% 50% 50%/90% 90% 50% 50%;
+    position: relative;
+    bottom: -34%;
+    left: 15.5%;
+    overflow: hidden;
+  }
+
+  .left img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 @media only screen and (max-width: 820px) {
   .growTreePageContainer {
     border: 3px solid black;
