--- a/development/frontend/src/pages/place/css/PlaceDetail.css
+++ b/development/frontend/src/pages/place/css/PlaceDetail.css
@@ -42,7 +42,7 @@
     /* border-radius: 40px; */
     margin-bottom: 30px;
     padding: 10px 0 40px 0;
-    border-bottom: 1px ridge;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.185);
   }
 
   .placeDetailCommentContainer {
