--- a/development/frontend/src/pages/user/css/UserProfile.css
+++ b/development/frontend/src/pages/user/css/UserProfile.css
@@ -67,14 +67,14 @@
     background-color: #f9f2f1;
     width: 85vw;
     box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
-    border-radius: 65px;
+    border-radius: 40px;
     display: flex;
     flex-direction: row;
     margin: 2% 0;
   }
 
   .pet-name {
-    font-size: 6vmin;
+    font-size: 7vmin;
     font-weight: 250;
     margin: 2px;
   }
@@ -139,28 +139,29 @@
 
   .pet-species-tag-chi {
     background-color: #ffebcd;
-    font-size: 15px;
+    font-size: 10px;
     color: #9b8769;
     border-radius: 30px;
     height: 20px;
-    padding: 6px 14px 7px;
+    padding: 6px 14px 6px;
   }
 
   .pet-tag-gender {
     background-color: #ffebcd;
-    font-size: 15px;
+    font-size: 10px;
     color: #9b8769;
     border-radius: 30px;
     height: 20px;
-    padding: 6px 14px 7px;
+    padding: 6px 14px 6px;
+    margin-left: 5px;
   }
 
   .pet-age {
     background-color: #e0cdff;
     border-radius: 30px;
-    font-size: 15px;
+    font-size: 10px;
     height: 20px;
-    padding: 6px 14px 7px;
+    padding: 6px 14px 6px;
     color: #7c699b;
   }
 
@@ -284,14 +285,14 @@
     background-color: #f7f1f0;
     width: 50vw;
     box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
-    border-radius: 65px;
+    border-radius: 40px;
     display: flex;
     flex-direction: row;
     margin: 2% 0;
   }
 
   .pet-name {
-    font-size: 6vmin;
+    font-size: 7vmin;
     font-weight: 250;
     margin: 2px;
   }
@@ -356,20 +357,20 @@
 
   .pet-species-tag-chi {
     background-color: #ffebcd;
-    font-size: 15px;
+    font-size: 10px;
     color: #9b8769;
     border-radius: 30px;
     height: 20px;
-    padding: 6px 14px 7px;
+    padding: 6px 14px 6px;
   }
 
   .pet-tag-gender {
     background-color: #ffebcd;
-    font-size: 15px;
+    font-size: 10px;
     color: #9b8769;
     border-radius: 30px;
     height: 20px;
-    padding: 6px 14px 7px;
+    padding: 6px 14px 6px;
   }
 
   .pet-age {
