--- a/development/frontend/src/pages/place/css/PlaceDetail.css
+++ b/development/frontend/src/pages/place/css/PlaceDetail.css
@@ -153,9 +153,307 @@
 /* ----------------------------- Laptop Ver. ----------------------------- */
 
 @media only screen and (max-width: 820px) {
+  .placeDetailPageContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .placeDetailCardContainer {
+    /* border: 2px solid black; */
+    width: 100vw;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    padding-top: 10px;
+  }
+
+  .placeDetailInfoContainer {
+    /* border: 2px solid rgb(255, 99, 169); */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+  }
+
+  .placeDetailPreviewPicture {
+    /* border: 2px solid rgb(255, 200, 0); */
+    border-radius: 15px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+
+  .placeDetailPreviewPicture img {
+    width: 470px;
+  }
+
+  .placeDetailEachComment {
+    /* border: 2px solid rgb(0, 170, 255); */
+    /* background-color: #ffebcd; */
+    /* border-radius: 40px; */
+    margin-bottom: 30px;
+    padding: 10px 0 40px 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.185);
+  }
+
+  .placeDetailCommentContainer {
+    width: 470px;
+  }
+
+  .placeDetailEachCommentName {
+    margin: 0 20px 10px 20px;
+    font-size: 1.2vmax;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    color: rgb(255, 174, 0);
+  }
+
+  .placeDetailEachCommentTitle {
+    margin: 0 20px 10px 20px;
+    font-size: 1.4vmax;
+    font-weight: 500;
+  }
+
+  .placeDetailEachCommentLike {
+    margin: 0 20px 10px 20px;
+    font-size: 1.8vmax;
+    /* border-bottom: 1px solid; */
+  }
+
+  .placeDetailEachCommentColumn {
+    /* border: 2px solid rgb(255, 200, 0); */
+    margin: 0 20px 10px 20px;
+    font-size: 1.2vmax;
+    font-weight: 300;
+  }
+
+  .placeDetailEachCommentPicture {
+    margin-left: 43%;
+  }
+
+  .placeDetailInfo {
+    /* border: 2px solid black; */
+    border-radius: 10px;
+    background-color: #e3d4db79;
+    display: flex;
+    flex-direction: column;
+    padding: 2%;
+    position: sticky;
+    top: 10px;
+    height: 100%;
+    width: 35%;
+  }
+
+  .placeDetailName {
+    /* border: 2px solid black; */
+    height: 20%;
+    width: 100%;
+    font-size: 3vmax;
+    font-weight: 500;
+  }
+
+  .placeDetailNameArea,
+  .placeDetailAddressArea,
+  .placeDetailPhoneArea,
+  .placeDetailDistrictArea,
+  .placeDetailThumbArea {
+    display: flex;
+    margin-bottom: 3%;
+  }
+
+  .placeDetailNameLogo,
+  .placeDetailAddressLogo,
+  .placeDetailPhoneLogo,
+  .placeDetailDistrictLogo,
+  .placeDetailThumbLogo {
+    display: flex;
+    align-items: center;
+    font-size: 2vmax;
+    margin-right: 3%;
+  }
+
+  .placeDetailAddress,
+  .placeDetailPhone,
+  .placeDetailDistrict,
+  .placeDetailThumb {
+    /* border:1px solid black; */
+    height: 10%;
+    width: 100%;
+    font-size: 1vmax;
+    font-weight: 500;
+  }
+
+  .placeDetailDistrict {
+    height: 10%;
+    width: 100%;
+  }
+
+  .placeDetailWH {
+    /* border: 2px solid black; */
+    height: 10%;
+    width: 100%;
+    font-size: 1.1vmax;
+    font-weight: 400;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+  }
 }
 
 /* -----------------------------  Phone Ver. ----------------------------- */
 
 @media only screen and (max-width: 767px) {
+  .placeDetailPageContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .placeDetailCardContainer {
+    /* border: 2px solid black; */
+    width: 100vw;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    padding-top: 10px;
+  }
+
+  .placeDetailInfoContainer {
+    /* border: 2px solid rgb(255, 99, 169); */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+  }
+
+  .placeDetailPreviewPicture {
+    /* border: 2px solid rgb(255, 200, 0); */
+    border-radius: 15px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+
+  .placeDetailPreviewPicture img {
+    width: 470px;
+  }
+
+  .placeDetailEachComment {
+    /* border: 2px solid rgb(0, 170, 255); */
+    /* background-color: #ffebcd; */
+    /* border-radius: 40px; */
+    margin-bottom: 30px;
+    padding: 10px 0 40px 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.185);
+  }
+
+  .placeDetailCommentContainer {
+    width: 470px;
+  }
+
+  .placeDetailEachCommentName {
+    margin: 0 20px 10px 20px;
+    font-size: 1.2vmax;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    color: rgb(255, 174, 0);
+  }
+
+  .placeDetailEachCommentTitle {
+    margin: 0 20px 10px 20px;
+    font-size: 1.4vmax;
+    font-weight: 500;
+  }
+
+  .placeDetailEachCommentLike {
+    margin: 0 20px 10px 20px;
+    font-size: 1.8vmax;
+    /* border-bottom: 1px solid; */
+  }
+
+  .placeDetailEachCommentColumn {
+    /* border: 2px solid rgb(255, 200, 0); */
+    margin: 0 20px 10px 20px;
+    font-size: 1.2vmax;
+    font-weight: 300;
+  }
+
+  .placeDetailEachCommentPicture {
+    margin-left: 43%;
+  }
+
+  .placeDetailInfo {
+    /* border: 2px solid black; */
+    border-radius: 10px;
+    background-color: #e3d4db79;
+    display: flex;
+    flex-direction: column;
+    padding: 2%;
+    position: sticky;
+    top: 10px;
+    height: 100%;
+    width: 35%;
+  }
+
+  .placeDetailName {
+    /* border: 2px solid black; */
+    height: 20%;
+    width: 100%;
+    font-size: 3vmax;
+    font-weight: 500;
+  }
+
+  .placeDetailNameArea,
+  .placeDetailAddressArea,
+  .placeDetailPhoneArea,
+  .placeDetailDistrictArea,
+  .placeDetailThumbArea {
+    display: flex;
+    margin-bottom: 3%;
+  }
+
+  .placeDetailNameLogo,
+  .placeDetailAddressLogo,
+  .placeDetailPhoneLogo,
+  .placeDetailDistrictLogo,
+  .placeDetailThumbLogo {
+    display: flex;
+    align-items: center;
+    font-size: 2vmax;
+    margin-right: 3%;
+  }
+
+  .placeDetailAddress,
+  .placeDetailPhone,
+  .placeDetailDistrict,
+  .placeDetailThumb {
+    /* border:1px solid black; */
+    height: 10%;
+    width: 100%;
+    font-size: 1vmax;
+    font-weight: 500;
+  }
+
+  .placeDetailDistrict {
+    height: 10%;
+    width: 100%;
+  }
+
+  .placeDetailWH {
+    /* border: 2px solid black; */
+    height: 10%;
+    width: 100%;
+    font-size: 1.1vmax;
+    font-weight: 400;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+  }
 }
