--- a/development/frontend/src/components/place/list/PlaceCard.css
+++ b/development/frontend/src/components/place/list/PlaceCard.css
@@ -115,10 +115,11 @@
     border-radius: 30px;
     color: #29201b;
     height: 2vh;
-    width: 20vw;
+    /* width: 20vw; */
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 6px 12px;
   }
   .mapType {
     font-size: 1vmin;
@@ -126,10 +127,11 @@
     color: rgb(226, 196, 152);
     border-radius: 20px;
     height: 1.5vh;
-    width: 12vw;
+    /* width: 12vw; */
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 6px 12px;
   }
 
   .cardMargin {
@@ -144,10 +146,11 @@
     background-color: #c3a6a0;
     border-radius: 20px;
     display: flex;
-    justify-content: space-between;
-    height: 24vh;
-    width: 63vw;
-    margin-top: 10%;
+    flex-direction: column;
+    justify-content: start;
+    height: 25vh;
+    width: 50vw;
+    margin: 2vh 5vw;
     box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.224);
   }
   .picture {
@@ -156,7 +159,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 60%;
     overflow: hidden;
   }
 
@@ -170,16 +173,22 @@
     /* border-radius: 0 20px 20px 0; */
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: flex-start;
+    /* margin: 2%; */
     padding: 2%;
-    width: 55%;
+    width: 100%;
+  }
+  .info > div {
+    margin: 2%;
   }
   .chiName {
     font-size: 4vmin;
+    width: 100%;
     font-weight: 500;
   }
   .engName {
+    display: none;
     font-size: 2vmin;
     font-weight: 300;
   }
@@ -189,10 +198,11 @@
     border-radius: 30px;
     color: #29201b;
     height: 1.5vh;
-    width: 25vw;
+    /* width: 50%; */
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 6px 12px;
   }
   .mapType {
     font-size: 1vmin;
@@ -200,10 +210,11 @@
     color: rgb(226, 196, 152);
     border-radius: 20px;
     height: 1.5vh;
-    width: 14 vw;
+    /* width: 14 vw; */
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center;  
+    padding: 6px 12px;
   }
 
   .cardMargin {
