--- a/development/frontend/src/pages/place/css/List.css
+++ b/development/frontend/src/pages/place/css/List.css
@@ -192,7 +192,7 @@
     align-items: flex-start;
     height: 100%;
     width: 100vw;
-    padding-top: 5%;
+    /* padding-top: 5%; */
   }
 
   .categoryContainerList {
@@ -267,6 +267,7 @@
     width: 65%;
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
 
   .CardContainerList {
