--- a/development/frontend/src/components/place/list/PlaceCard.css
+++ b/development/frontend/src/components/place/list/PlaceCard.css
@@ -98,11 +98,11 @@
     height: 100%;
   }
 
-  .previewPicture img {
+  /* .previewPicture img {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+  } */
 
   .info {
     /* border: 3px solid rgb(140, 0, 255); */
@@ -156,7 +156,7 @@
 @media only screen and (max-width: 767px) {
   .card {
     /* border: 3px solid black; */
-    background-color: #c3a6a0;
+    background-color: #d6b6af;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
@@ -168,24 +168,27 @@
   }
   .picture {
     /* border: 1px solid #eee; */
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 60%;
+
+    width: 100%;
+    height: 100%;
     overflow: hidden;
   }
 
   .previewPicture {
-    width: 100%;
-    height: 100%;
-  }
-
-  .previewPicture img {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 50%;
+    height: 90%;
+    border-radius: 50%;
   }
+
+  /* .previewPicture img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  } */
 
   .info {
     /* border: 3px solid rgb(140, 0, 255); */
@@ -193,7 +196,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: flex-start;
+    align-items: center;
     /* margin: 2%; */
     padding: 2%;
     width: 100%;
@@ -203,7 +206,6 @@
   }
   .chiName {
     font-size: 4vmin;
-    width: 100%;
     font-weight: 500;
   }
   .engName {
@@ -232,7 +234,7 @@
     /* width: 14 vw; */
     display: flex;
     align-items: center;
-    justify-content: center;  
+    justify-content: center;
     padding: 6px 12px;
   }
 
