--- a/development/frontend/src/pages/pet/css/GrowTree.css
+++ b/development/frontend/src/pages/pet/css/GrowTree.css
@@ -16,6 +16,9 @@
     width: 100%;
     font-size: 3vmax;
   }
+  .tree-title{
+    font-weight: 300;
+  }
 
   .growPictureLeft {
     display: flex;
@@ -140,14 +143,20 @@
   }
 }
 
+
+
+
 @media only screen and (max-width: 820px) {
   .growTreePageContainer {
-    border: 3px solid black;
+    /* border: 3px solid black; */
     display: flex;
     justify-content: center;
-    background-image: url("/src/assets/128.png");
+    /* background-image: url("/src/assets/128.png"); */
     background-repeat: repeat-y;
     background-position: center;
+  }
+  .tree-title{
+    font-weight: 300;
   }
 
   .treeContainer {
@@ -170,12 +179,12 @@
   }
 
   .leftPhoto {
-    border: 3px solid rgb(255, 114, 182);
+    /* border: 3px solid rgb(255, 114, 182); */
     margin-bottom: 10px;
   }
 
   .rightPhoto {
-    border: 3px solid rgb(255, 191, 0);
+    /* border: 3px solid rgb(255, 191, 0); */
     margin-bottom: 10px;
   }
 
@@ -280,18 +289,57 @@
   }
 }
 
+
+
+
+
 @media only screen and (max-width: 767px) {
+  .grow-tree-body{
+    /* background-image: url("/src/assets/128.png"); */
+    background-repeat: repeat-y;
+    background-position:left;
+    background-size: 50%;
+    /* opacity: 0.5; */
+  }
+  .grow-tree-mid{
+    display: flex;
+    justify-content: center;
+  }
+  .tree-top-area{
+    height: 20vw;
+  
+  }
+  .tree-title{
+    font-size: 8vmin;
+    margin-left: 80px;
+    margin-top: 10px;
+    font-weight: 300;
+  }
+
   .growTreePageContainer {
     /* border: 3px solid black; */
     display: flex;
     justify-content: center;
-    background-image: url("/src/assets/128.png");
-    background-repeat: repeat-y;
-    background-position: center;
+   
+    width: 95vw;
+    /* background: rgba(255, 255, 255, 0.5); */
+    border-radius: 30px;
   }
+.tree-upload-grow-tree{
+  color:#f2968f;
+  font-size: 50px;
+  margin-top: 5px;
+  position:fixed;
+  right:15px;
+  z-index: 10;
 
+}
+.tree-top-area{
+  display: flex;
+  justify-content: space-between;
+}
   .treeContainer {
-    border: 3px solid rgb(0, 174, 255);
+    /* border: 3px solid rgb(0, 174, 255); */
     display: flex;
     flex-direction: column;
     overflow: scroll;
@@ -310,12 +358,12 @@
   }
 
   .leftPhoto {
-    border: 3px solid rgb(255, 114, 182);
+    /* border: 3px solid rgb(255, 114, 182); */
     margin-bottom: 10px;
   }
 
   .rightPhoto {
-    border: 3px solid rgb(255, 191, 0);
+    /* border: 3px solid rgb(255, 191, 0); */
     margin-bottom: 10px;
   }
 
@@ -326,7 +374,7 @@
     height: 35vh;
     position: relative;
     border-radius: 50%;
-    background: #fff;
+    background: #ffffffb7;
     transition: all 0.5s cubic-bezier(0, 0.73, 0.73, 1.52);
   }
 
@@ -339,24 +387,24 @@
   .paw:before {
     content: "";
     display: block;
-    width: 15%;
-    height: 23%;
+    width: 20%;
+    height: 28%;
     background: #f2968f58;
     border-radius: 50% 50% 50% 50%;
     left: 27%;
-    top: 10%;
+    top: 7%;
     transform: rotate(-15deg);
   }
 
   .paw:after {
     content: "";
     display: block;
-    width: 15%;
-    height: 23%;
+    width: 20%;
+    height: 28%;
     background: #f2968f58;
     border-radius: 50% 50% 50% 50%;
-    right: 27%;
-    top: 10%;
+    right: 23%;
+    top: 7%;
     transform: rotate(15deg);
   }
 
@@ -376,12 +424,12 @@
     content: "";
     display: block;
     width: 15%;
-    height: 20%;
+    height: 23%;
     background: #f2968f58;
     border-radius: 70% 70% 50% 50%;
     /* 60% 60% 40% 40% */
-    left: 10%;
-    top: 28%;
+    left: 6%;
+    top: 29%;
     transform: rotate(-50deg);
   }
 
@@ -389,18 +437,18 @@
     content: "";
     display: block;
     width: 15%;
-    height: 20%;
+    height: 23%;
     background: #f2968f58;
     border-radius: 70% 70% 50% 50%;
-    right: 10%;
-    top: 28%;
+    right: 6%;
+    top: 32%;
     transform: rotate(50deg);
   }
 
   .left,
   .right {
     width: 48vw;
-    height: 21vh;
+    height: 40vw;
     border-radius: 70% 70% 50% 50%/90% 90% 50% 50%;
     position: relative;
     bottom: -34%;
