--- a/development/frontend/src/pages/user/css/UserProfile.css
+++ b/development/frontend/src/pages/user/css/UserProfile.css
@@ -41,7 +41,7 @@
   font-weight: 200;
 }
   .user-pet-profile-container {
-    height: 73vh;
+    height: 65vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -258,7 +258,7 @@
   }
 
   .user-pet-profile-container {
-    height: 80vh;
+    height: 65vh;
     width: 60vw;
     display: flex;
     flex-direction: column;
@@ -328,7 +328,7 @@
     background-color: rgba(216, 209, 209, 0.411);
   }
   .user-emtpy-pet-icon-dummy{
-    font-size: 80px;
+    font-size: 20vw;
     color: white;
   }
 
