--- a/development/frontend/src/pages/pet/css/PetProfile.css
+++ b/development/frontend/src/pages/pet/css/PetProfile.css
@@ -1,20 +1,16 @@
-/* -----------------------------  Phone Ver. ----------------------------- */
-
 @media only screen and (max-width: 820px) {
-
-
   .pet-profile-page {
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  
-  .pet-card-container{
-      display: flex;
-      justify-content: center;
+
+  .pet-card-container {
+    display: flex;
+    justify-content: center;
   }
-  
+
   .pet-card {
     height: 15vh;
     width: 80vw;
@@ -25,13 +21,13 @@
     box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.2);
     border-radius: 40px;
     margin: 2%;
-  } 
+  }
   .pet-icon {
     border-radius: 50%;
     width: 20vmin;
     height: 20vmin;
   }
-  
+
   .empty-pet-icon {
     border-radius: 50%;
     width: 22vmin;
@@ -41,35 +37,35 @@
     align-items: center;
     justify-content: center;
   }
-  
+
   .pet-introduction {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  
+
   .pet-info-name {
     font-size: 10vmin;
     font-weight: 230;
   }
-  
+
   .pet-info-age {
-      background-color: #e0cdff;
-      border-radius: 30px;
-      font-size: 15px;
-      height: 20px;
-      padding: 6px 14px 7px;
-      color: #7c699b;
-      margin: 10px;
+    background-color: #e0cdff;
+    border-radius: 30px;
+    font-size: 15px;
+    height: 20px;
+    padding: 6px 14px 7px;
+    color: #7c699b;
+    margin: 10px;
   }
-  
+
   .pet-profile-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: 6vmin;
   }
-  
+
   .pet-profile {
     margin: 15px;
     width: 80vw;
@@ -84,9 +80,7 @@
     color: #2b2b2e;
     font-weight: 150;
   }
-  }
-
-/* -----------------------------  Pad Ver. ----------------------------- */
+}
 
 @media only screen and (min-width: 500px) {
   .pet-card {
@@ -100,25 +94,19 @@
   }
 }
 
-
-
- 
-/* -----------------------------  Pad Ver. ----------------------------- */
 @media only screen and (min-width: 821px) {
-
-
   .pet-profile-page {
     height: 86vh;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  
-  .pet-card-container{
-      display: flex;
-      justify-content: center;
+
+  .pet-card-container {
+    display: flex;
+    justify-content: center;
   }
-  
+
   .pet-card {
     height: 20vw;
     width: 50vw;
@@ -130,13 +118,13 @@
     border-radius: 40px;
     margin: 2%;
   }
-  
+
   .pet-icon {
     border-radius: 50%;
     width: 15vmin;
     height: 15vmin;
   }
-  
+
   .empty-pet-icon {
     border-radius: 50%;
     width: 15vmin;
@@ -146,35 +134,35 @@
     align-items: center;
     justify-content: center;
   }
-  
+
   .pet-introduction {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  
+
   .pet-info-name {
     font-size: 10vmin;
     font-weight: 230;
   }
-  
+
   .pet-info-age {
-      background-color: #e0cdff;
-      border-radius: 30px;
-      font-size: 15px;
-      height: 20px;
-      padding: 6px 14px 7px;
-      color: #7c699b;
-      margin: 10px;
+    background-color: #e0cdff;
+    border-radius: 30px;
+    font-size: 15px;
+    height: 20px;
+    padding: 6px 14px 7px;
+    color: #7c699b;
+    margin: 10px;
   }
-  
+
   .pet-profile-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: 6vmin;
   }
-  
+
   .pet-profile {
     margin: 15px;
     width: 50vw;
@@ -188,6 +176,12 @@
     color: #2b2b2e;
     font-weight: 150;
   }
-
 }
 
+/* 平板 size */
+@media only screen and (max-width: 820px) {
+}
+
+/* 手機 size */
+@media only screen and (max-width: 767px) {
+}
